# critic-format

./: Cargo.toml  README.md  TEI_subspec.md  TODO.md  tei_critic.odd  tei_critic.rng
.github/workflows/: rust.yml
examples/: 01_all_elements.xml  02_lines_consistent.xml  03_language_normalization.xml  04_oneline.xml  05_with_nontrivial_space.xml  06_no_hand_desc.xml  07_multi-page.xml  08_single_page.xml
src/: denorm.rs  destream.rs  lib.rs  normalized.rs  schema.rs  streamed.rs  surface_form.rs
